# moodle-tool_userautodelete

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  FUNDING.yml  README.md  TESTING.md  dryrun.php  info.php  log.php  manageaction.php  managefilter.php  managestep.php  manageworkflow.php  mkdocs-macros.py  mkdocs.yml  phpcs.xml  pyproject.toml  settings.php  version.php  workflow.php  workflows.php
.github/workflows/: docs.yml  moodle-plugin-ci.yml
action/: userdeleteaction_base.php
action/anonymize/: version.php
action/cohort/: version.php
action/delete/: version.php
action/mail/: version.php
action/suspend/: version.php
action/unsuspend/: version.php
amd/src/: modal_delete_save_cancel.js
classes/: logger.php  manager.php  process.php  step.php  step_subplugin.php  userdeleteaction.php  userdeletefilter.php  workflow.php
classes/form/: log_filter_form.php  step_delete_form.php  subplugin_instance_settings_form.php  workflow_delete_form.php  workflow_disable_form.php  (+1 more)
db/: install.php  install.xml  services.php  subplugins.json  tasks.php  uninstall.php  upgrade.php
docs/: index.md  screenshots.md
filter/: userdeletefilter_base.php
templates/: dryrun.mustache  log.mustache  workflow.mustache  workflows.mustache  workflows_empty.mustache  workflows_header.mustache
tests/: endtoend_scenario_test.php  generator_test.php  logger_test.php  manager_test.php  placeholder_test.php  process_test.php  step_test.php  userdeleteaction_test.php  userdeleteaction_testcase.php  userdeletefilter_test.php  userdeletefilter_testcase.php  workflow_test.php
(+187 files in other folders)
