[tool.poetry]
name = "moodle-local_archiving"
version = "1.2.0"
description = "MKDocs based documentation generator for the Archiving Moodle local plugin."
authors = ["Niels Gandraß <niels@gandrass.de>"]
license = "GNU General Public License v3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = {extras = ["imaging"], version = "^9.5.40"}
mkdocs = "^1.6.1"
mkdocs-material-extensions = "^1.3.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-glightbox = "^0.5.0"
mkdocs-get-deps = "^0.2.0"
mkdocs-panzoom-plugin = "^0.5.0"
mkdocs-drawio = "^1.7.0"
mkdocs-macros-plugin = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
